--- a/rotacao3d.css
+++ b/rotacao3d.css
@@ -7,8 +7,7 @@ body{
     background-color: rgb(214, 214, 214);
 }
 .container{
-    margin-top: 200px;
-    left: 50%;
+    margin: 200px;
     height: 400px;
     width: 220px;
     position: relative;
